--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </div>
         <div class="p-4 lg:w-1/4 md:w-1/2">
           <div class="h-full flex flex-col items-center text-center">
-            <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="bb77d693-ea82-4dd9-8be7-afe2ee3b5564.jfif">
+            <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://drive.google.com/file/d/1jZq1cj02g9Xn4VHoD3rib963vSIUw3AK/view?usp=sharing">
             <div class="w-full">
               <h2 class="title-font font-medium text-lg text-gray-900">Rishabh Saini</h2>
               <h3 class="text-gray-500 mb-3">Newbie</h3>
